--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,9 +17,7 @@ python-dotenv==1.0.1
 pydantic-settings==2.7.1
 email-validator==2.2.0
 
-# Data Scraping
-playwright==1.49.1
-selenium==4.27.1
+# Data Scraping (cloud-compatible)
 beautifulsoup4==4.12.3
 lxml==5.3.0
 
@@ -35,11 +33,10 @@ googlemaps>=4.10.0  # Google Maps geocodingnts
 
 # Image Processing
 pillow==11.0.0
-opencv-python==4.10.0.84
 
 # HTTP & API Clients
 httpx==0.28.1
-aiohttp==0.11.11
+aiohttp==3.11.11
 requests==2.32.3
 
 # Data Processing
