--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,9 +34,12 @@ services:
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     ports:
       - "8000:8000"
+    env_file:
+      - ./backend/.env
     environment:
-      DATABASE_URL: postgresql://yasin:yasin123@postgres:5432/yasin_trade_db
+      DATABASE_URL: postgresql+psycopg2://yasin:yasin123@postgres:5432/yasin_trade_db
       REDIS_URL: redis://redis:6379/0
+      FRONTEND_URL: http://localhost:3000
     volumes:
       - ./backend:/app
     depends_on:
@@ -67,6 +70,7 @@ services:
 
 volumes:
   postgres_data:
+
 
 networks:
   yasin-network:
