--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: yasin-trade-backend
     runtime: python
     rootDir: backend
-    buildCommand: pip install -r requirements.txt && playwright install chromium
+    buildCommand: pip install -r requirements.txt --ignore-installed
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     plan: free
     envVars:
