--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ bcrypt==4.2.0
 python-dotenv==1.0.1
 pydantic-settings==2.7.1
 email-validator==2.2.0
+google-auth>=2.28.0
 
 # Data Scraping (cloud-compatible)
 beautifulsoup4==4.12.3
