feat: Render+Supabase deployment config — migrations, scripts, GitHub Actions, kurulum rehberi

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,22 +1,78 @@
-# Database
-DATABASE_URL=postgresql://yasin:yasin123@localhost:5432/yasin_trade_db
+# ============================================================
+# backend/.env.example — Backend Ortam Değişkenleri
+# Kopyalayın: cp .env.example .env → Değerleri doldurun
+# ============================================================
 
-# Security
-SECRET_KEY=your-secret-key-here-change-in-production
+# ── Zorunlu ────────────────────────────────────────────────
+
+# Supabase Transaction Pool bağlantısı (port 6543)
+DATABASE_URL=postgresql://postgres.PROJE_ID:SIFRE@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
+
+# JWT imzalama key (en az 32 karakter)
+# Üretin: python3 -c "import secrets; print(secrets.token_hex(32))"
+SECRET_KEY=degistirin_min_32_karakter_gizli_anahtar
+
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
-# API Keys
-OPENAI_API_KEY=sk-...
-ANTHROPIC_API_KEY=sk-ant-...
-GOOGLE_MAPS_API_KEY=...
-SENDGRID_API_KEY=...
-
-# Redis
-REDIS_URL=redis://localhost:6379/0
-
-# CORS
+# Frontend URL (CORS için)
 FRONTEND_URL=http://localhost:3000
 
-# Environment
 ENVIRONMENT=development
+
+# ── AI Sağlayıcıları (en az biri) ──────────────────────────
+
+# Groq — ÜCRETSİZ ve hızlı (ÖNERİLEN)  → console.groq.com
+GROQ_API_KEY=gsk_...
+
+# OpenAI → platform.openai.com (ücretli)
+OPENAI_API_KEY=sk-...
+
+# Anthropic → console.anthropic.com (ücretli, opsiyonel)
+ANTHROPIC_API_KEY=sk-ant-...
+
+# HuggingFace (opsiyonel)
+HUGGINGFACE_API_KEY=hf_...
+
+# ── Google ──────────────────────────────────────────────────
+
+# Google Maps → console.cloud.google.com > Maps Platform
+GOOGLE_MAPS_API_KEY=AIza...
+
+# Google OAuth → console.cloud.google.com > OAuth 2.0
+GOOGLE_CLIENT_ID=xxxx.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=GOCSPX-...
+
+# ── Email (birini seçin) ────────────────────────────────────
+
+# SendGrid → app.sendgrid.com
+SENDGRID_API_KEY=SG....
+
+# Resend → resend.com
+RESEND_API_KEY=re_...
+
+# SMTP (alternatif)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=kullanici@gmail.com
+SMTP_PASSWORD=uygulama_sifresi
+FROM_EMAIL=noreply@sirketiniz.com
+
+# ── Scraping ────────────────────────────────────────────────
+
+# ScraperAPI → scraperapi.com
+SCRAPERAPI_KEY=...
+
+# ── Redis (Background tasks) ────────────────────────────────
+
+REDIS_URL=redis://localhost:6379/0
+
+# ── Dış Ticaret API'leri (opsiyonel) ───────────────────────
+
+UN_COMTRADE_API_KEY=
+TRADEATLAS_API_KEY=
+IMPORTGENIUS_API_KEY=
+PANJIVA_API_KEY=
+TRADEMO_API_KEY=
+EUROPAGES_API_KEY=
+TRADEMAP_API_KEY=
