fix: 4 kritik sorun düzeltildi - JWT expire 7 gün, scraper hata yakalama, chatbot error handling, token refresh endpoint

--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,7 @@ SECRET_KEY=degistirin_en_az_32_karakter_rastgele_metin
 
 # Token ayarları
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=1440   # 24 saat
+ACCESS_TOKEN_EXPIRE_MINUTES=10080  # 7 gün
 
 
 # ─────────────────────────────────────────────────────────────
